Atualização V2.1 - Estoque Avançado, Prioridades e Lembretes Inteligentes
Esta atualização transforma o bot em um sistema de gestão completo (ERP) e melhora significativamente a estabilidade e a usabilidade.

✨ Funcionalidades (Features)
- Sistema de Estoque 2.0:
  - Separado comando de criação (/estoque_criar) do de adição (/estoque_add).
  - Implementado campo 'Quantidade Mínima'.
  - Novo relatório de 'Reposição de Estoque' em /gerar_planilha.
  - Alertas visuais e mensagens de aviso quando o estoque fica baixo.
- Prioridades: Adicionado nível de urgência (Alta/Média/Baixa) para Demandas e Pedidos, com indicadores visuais (🔴, 🟡, 🟢).
- Gestão de Visitas:
  - Validação estrita de datas (DD/MM/AAAA).
  - Notificações de visita agora marcam cargos específicos por unidade (Tatuapé/Campo Belo) e apenas 1 dia antes.
- Planilhas:
  - Nova planilha de Demandas com filtro por Usuário.
  - Adicionadas colunas de 'Data Criação' e 'Data Finalização'.
- Sistema de Logs: Agora baixa e reenvia anexos (imagens) para o canal de logs para garantir persistência.
- Interface: Adicionado botão de lixeira (🗑️) para apagar listas manualmente.
- Visual: Adicionado ícone personalizado (.ico) ao executável do Windows via resource.rc.

🔄 Refatoração e Melhorias (Refactor/QoL)
- Lembretes Inteligentes: Removido spam diário. Demandas e Lembretes agora só notificam no privado se o prazo for no dia seguinte.
- Listas: Mensagens de lista (/lista_demandas) sem paginação agora se auto-deletam em 60s.
- Config: Adicionado suporte a IDs de cargos por unidade no config.json.
- Utils: Centralizada lógica de paginação (generatePageEmbed) e validação de datas.

🐛 Correções de Bugs (Fixes)
- JSON Crash: Implementado 'safe_get_snowflake' no DatabaseManager para corrigir crashes ao ler IDs salvos como string vs número.
- Corrigidos erros de linker movendo generatePageEmbed para Utils.
- Corrigido problema onde ícone da janela não aparecia (forçado via WinAPI LoadImage).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if(MSVC)
     add_compile_options(/utf-8 /EHsc)
 endif()
 
+# --- MUDANÇA AQUI: Adicionado resource.rc ---
 add_executable(${PROJECT_NAME}
     src/main.cpp
     src/BotCore.cpp
@@ -45,7 +46,11 @@ add_executable(${PROJECT_NAME}
     src/commands/CompraCommands.cpp
     src/commands/GerarPlanilhaCommand.cpp
     src/commands/TicketCommands.cpp
- "include/EstoqueCommands.h" "src/commands/EstoqueCommands.cpp" "include/TodoCommands.h" "src/commands/TodoCommands.cpp")
+    src/commands/EstoqueCommands.cpp
+    src/commands/TodoCommands.cpp
+    resource.rc
+)
+# --------------------------------------------
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     dpp
