Atualização V1.5.0 - Relatórios Diários, Interatividade e Gestão Financeira
Esta atualização introduz um novo nível de interatividade com o uso de Formulários (Modals) e Botões, além de expandir as capacidades de relatórios administrativos e controle financeiro detalhado.

✨ Funcionalidades (Features)

- Sistema de Relatórios Diários:

- Novo comando /relatorio_do_dia que abre um formulário interativo para registro de atividades.

- Nova opção de exportação em /gerar_planilha (tipo: relatorios) que gera o histórico filtrado por funcionário.

Interatividade (Modals & Botões):

- Implementação de formulários visuais para finalizar Demandas, Pedidos e Lembretes (substituindo digitação de texto longo).

- Adicionado botão interativo "Finalizar Agora" ao visualizar uma demanda pendente.

 Gestão Financeira e de Estoque:

- Adicionado suporte a Categorias (Café, ASB, Faxina, Papelaria, Outros) na criação de itens de estoque e registro de gastos.

- Adicionado seletor de Unidade (Tatuapé/Campo Belo) no registro de gastos.

- Novo comando /estoque_delete para remoção permanente de itens do banco de dados.

 Tickets com Assunto:

- O comando /chamar agora exige um campo 'Assunto', facilitando a identificação do motivo do chamado nos logs e canais.

Gestão de Visitas:

- Adicionada a opção de anexar a foto da Ficha ao utilizar /finalizar_visita, salvando-a no histórico.

🔄 Refatoração e Melhorias (Refactor/QoL)

- Monitoramento de Prazos: Implementada lógica visual para prazos:

- Status "ATRASADA" (🔴) para demandas pendentes com data vencida.

- Status "FINALIZADA COM ATRASO" (🟠) para demandas entregues após o prazo.

- Visualização Detalhada: Novo comando /ver_demanda exibe detalhes completos da solicitação sem cortes de texto, incluindo status de atraso.

- Planilhas: O gerador de planilhas agora destaca visualmente (cores) as demandas atrasadas ou entregues fora do prazo.

🐛 Correções de Bugs (Fixes)

- Persistência de Imagens: Reescrita completa da função BaixarAnexo em 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_executable(${PROJECT_NAME}
     src/commands/EstoqueCommands.cpp
     src/commands/TodoCommands.cpp
     resource.rc
-)
+ "include/RelatorioCommands.h" "src/commands/RelatorioCommands.cpp")
 # --------------------------------------------
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
