✨ Novas Funcionalidades (Inteligência Artificial)
• [Módulo IA Integrado] O bot agora pensa! 🧠
  - /ia: Tira dúvidas gerais sobre o funcionamento do bot e processos da clínica.
  - /analise_leads: Lê o banco de dados de leads e gera um relatório estratégico de vendas, comparando o mês atual com o anterior.
  - /melhor_funcionario: Analisa todos os "Relatórios Diários" enviados e elege o destaque da equipe com base na produtividade.

🔄 Melhorias e Qualidade de Vida

• [Nomenclatura de Estoque] Ajustamos os comandos para termos mais naturais do dia a dia.
  - De: /estoque_add ➝ Para: /estoque_repor
  - De: /estoque_remove ➝ Para: /estoque_baixa

• [Visual Premium] Estética renovada.
  - Padronização de Embeds: Todos os comandos agora respondem com painéis visuais organizados, cores consistentes e layout limpo, abandonando as mensagens de texto simples.

• [Limpeza Automática & Manual] O chat não vai mais virar bagunça.
  - Auto-Delete: TODAS as mensagens e respostas do bot agora possuem um timer de 1 minuto. Depois disso, elas somem sozinhas.
  - Botão Lixeira (🗑️): Precisa apagar antes do tempo? O botão de lixeira voltou e foi adicionado em absolutamente todas as interações do bot.

🐞 Correções e Ajustes

• [Imagens em Anexos] Fim dos links quebrados.
  - Comando /placa: Corrigido o erro onde a imagem anexada não aparecia no embed enviado para o canal de produção.
  - Logs de Auditoria: Refizemos a lógica de envio de imagens para o canal de logs. Agora, prints e arquivos enviados no chat devem aparecer corretamente no registro histórico.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,29 +28,20 @@ if(MSVC)
     add_compile_options(/utf-8 /EHsc)
 endif()
 
-# --- MUDANÇA AQUI: Adicionado resource.rc ---
-add_executable(${PROJECT_NAME}
-    src/main.cpp
-    src/BotCore.cpp
-    src/ConfigManager.cpp
-    src/DatabaseManager.cpp
-    src/CommandHandler.cpp
-    src/EventHandler.cpp
-    src/ReportGenerator.cpp
-    src/Utils.cpp
-    src/TicketManager.cpp
-    src/commands/VisitasCommands.cpp
-    src/commands/LeadCommands.cpp
-    src/commands/SolicitacaoCommands.cpp
-    src/commands/PlacaCommands.cpp
-    src/commands/CompraCommands.cpp
-    src/commands/GerarPlanilhaCommand.cpp
-    src/commands/TicketCommands.cpp
-    src/commands/EstoqueCommands.cpp
-    src/commands/TodoCommands.cpp
-    resource.rc
- "include/RelatorioCommands.h" "src/commands/RelatorioCommands.cpp")
-# --------------------------------------------
+# --- MUDANÇA: Usar GLOB para encontrar arquivos automaticamente ---
+# Isso pega TODOS os .cpp dentro de src/ e src/commands/
+file(GLOB SOURCES 
+    "src/*.cpp" 
+    "src/commands/*.cpp"
+)
+
+# Adiciona resource.rc se existir (se der erro, remova esta linha)
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resource.rc")
+    list(APPEND SOURCES resource.rc)
+endif()
+
+add_executable(${PROJECT_NAME} ${SOURCES} "include/httplib.h")
+# ---------------------------------------------------------------
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     dpp
